What's New for OpenJPEG

* : fixed
- : removed
! : changed
+ : added

December 3, 2010
* [antonin] workaround for name clash when building static and dynamic on WIN32 (see http://www.vtk.org/Bug/view.php?id=10190 for description) 

November 28, 2010
* [antonin] fixed a bug in codec/convert.c that prevented to build executables with WIN32 compiler (thanks winfried)
! [antonin] changed cmake behaviour: executables are now always statically linked. When -DBUIL_SHARED_LIBS option is ON (the default), the shared versions of the libraries are also built (but executables remain linked against the static libraries).

November 25, 2010
* [antonin] fix compilation and DLL creation of libopenjpeg with MSYS/MinGW (from vincent.torri, see issue 47 on googlecode)

November 22, 2010
! [antonin] xcode : changed to native architecture build by default
* [antonin] reverted 'include "../opj_config.h"' to 'include "opj_config.h"'

November 17, 2010
! [antonin] install man pages by default. install CHANGES and LICENSE
! [antonin] minor changes in cmake files (from winfried)

November 16, 2010
! [antonin] minor changes in cmake flags

November 15, 2010
! [antonin] xcode project rewrite.
! [antonin] changed imagetopng() function to correctly deal with non-standard bit-depths. Add png support for win32. (from winfried)
* [antonin] minor changes in header inclusions
* [antonin] complete rewrite of opj_convert.c with correct values (from winfried)

November 11, 2010
- [antonin] removed call to dirent.h in jp3d;

October 28, 2010
* [ben.boeckel] Set the soname and soversion on the jpwl library with CMake
+ [ben.boeckel] Install jpwl binaries with CMake

October 26, 2010
* [ben.boeckel] Install symlinks to versioned directory headers when using CMake
+ [ben.boeckel] Set the library version on jp3d when using CMake

October 25, 2010
* [ben.boeckel] Fix jp3d version

October 24, 2010
* [antonin] Fixed doxygen data inside source code (from winfried)

October 22, 2010